[package]
name = "joycon_typer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
joycon-rs = { git = "https://github.com/KaiseiYokoyama/joycon-rs.git", branch = "dependabot/cargo/hidapi-2.2" }
tokio = { version = "1" , features = ["full"] }
sqlx = { version = "0.6.3", features = [ "runtime-tokio-rustls", "mysql" ] }
tensorflow = "0.20.0"
diesel = { version = "2.0.0", features = ["sqlite"] }
dotenvy = "0.15"
